fixed layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,6 @@
 }
 
 body {
-  @apply overflow-y-hidden;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
